plugins {
    id "de.monticore.generator" version "$mc_version" apply false
    id "com.gradleup.shadow" version "$shadow_plugin_version" apply false
}

allprojects {
    group = "de.monticore"

    layout.buildDirectory = layout.projectDirectory.dir("target")

    repositories {
        if (("true").equals(getProperty('useLocalRepo'))) {
            mavenLocal()
        }

        maven {
            credentials.username = mavenUser
            credentials.password = mavenPassword
            url = repo
        }

        mavenCentral()
    }
}

subprojects {
    apply plugin: "java-library"
    apply plugin: "maven-publish"
    apply plugin: "de.monticore.generator"

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }

        withJavadocJar()
        withSourcesJar()
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()

        testLogging {
            exceptionFormat = "full"
            showStackTraces = true
            showStandardStreams = true
        }
    }

    publishing {
        repositories {
            maven {
                credentials.username = mavenUser
                credentials.password = mavenPassword

                def releasesRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/"
                def snapshotsRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/"
                url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
            }
        }
        publications {
            mavenJava(MavenPublication) {
                artifactId = "$project.name"
                from components.java
            }
        }
    }
}